[workspace]

members = [
    "iron-key",
    "iron-key-bench",
    "arithmetic",
    "subroutines",
    "transcript",
    "util",
    "whatsapp-bench",
]

# Add dependencies here

[workspace.dependencies]

# Arkworks dependencies
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-std = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
# Other dependencies
rayon = { version = "1.5.2", default-features = false }
thiserror = "2.0.12"
sha2 = "0.10"
fake = { version = "4.3.0", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
criterion = "0.5.1"
anyhow = "1.0.97"
once_cell = "1.18"
# Testing dependencies
ark-bn254 = "0.5.0"
divan = "0.1.17"
rand = "0.9.1"
derivative = "2.2.0"
ndarray = { version = "0.16.*", default-features = false }

[workspace.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "../docs-header.html"]

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
# ark-poly = { git = "https://github.com/arkworks-rs/algebra.git" }
# ark-ff = { git = "https://github.com/arkworks-rs/algebra.git" }
# ark-ec = { git = "https://github.com/arkworks-rs/algebra.git" }
# ark-serialize = { git = "https://github.com/arkworks-rs/algebra.git" }
# ark-bn254 = { git = "https://github.com/arkworks-rs/algebra.git" }

ark-poly = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }

[profile.bench]
debug = true # emit DWARF
lto = "off" # avoid link-time inlining across crates
opt-level = 3 # keep it fast but still symbolizable
