[package]
name = "iron-key-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
iron-key = { path = "../iron-key" }
ark-std = { workspace = true }
divan = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
subroutines = { path = "../subroutines" }
rand = { workspace = true }
sha2 = { workspace = true }
ark-bn254 = { workspace = true }
rayon = { workspace = true, optional = true }
anyhow = {workspace = true}
once_cell =  {workspace = true}
num_cpus = "1.16"
[[bench]]
name = "bench"
harness = false


[features]
default = ["std"]
std = ["ark-ff/std", "ark-std/std"]
print-trace = ["ark-std/print-trace", "subroutines/print-trace", "iron-key/print-trace"]
parallel = ["std", "iron-key/parallel", "subroutines/parallel", "rayon","ark-ec/parallel","ark-ff/parallel","ark-poly/parallel","ark-serialize/parallel","ark-std/parallel"]

[profile.bench]
debug = true        # emit DWARF
lto = "off"         # avoid link-time inlining across crates
opt-level = 3       # keep it fast but still symbolizable