[package]
name = "iron-key"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-poly = { workspace = true }


# Hyperplonk dependencies
arithmetic = { path = "../arithmetic" }
subroutines = { path = "../subroutines" }
transcript = { path = "../transcript" }
# Other dependencies
derivative = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
[dev-dependencies]
ark-bn254 = { workspace = true }

[features]
default = ["std"]
std = ["ark-ff/std", "ark-poly/std", "ark-std/std"]
print-trace = [
    "ark-std/print-trace",
    "arithmetic/print-trace",
    "subroutines/print-trace",
]
parallel = [
    "std",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-serialize/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "arithmetic/parallel",
    "subroutines/parallel",
    "rayon",
]
